fixed horizontal scroll issue

--- a/src/media/css/detail/reviews.styl
+++ b/src/media/css/detail/reviews.styl
@@ -25,6 +25,7 @@
 
     .stars-wrapper {
         transform: scale(2.5);
+        display: inline-block;
 
         +rtl() {
             transform: scale(-2.5, 2.5);
